Fixed on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,6 @@ body {
 
 #app,#generated {
     border-radius:5px;
-    width: fit-content;
 }
 
 #pwd {
@@ -24,6 +23,8 @@ body {
     color:yellow;
     padding:5px;
     border-radius:2px;
+    word-break: break-all;
+    cursor:pointer;
 }
 
 #pwd:hover {
